# WritingProgram

./: ChapterControl.Designer.cs  ChapterControl.cs  ChapterControl.resx  ChapterNotesContainer.cs  ChapterNotesPanel.cs  ChapterTextBox.cs  Global.cs  MainForm.Designer.cs  MainForm.cs  NotesControl.Designer.cs  NotesControl.cs  Program.cs  SimpleWritingProgram.csproj  SimpleWritingProgram.sln  app.manifest
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
WritingProgram/: CMakeLists.txt  editorform.cpp  editorform.h  editorform.ui  fontselector.cpp  fontselector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notepad.cpp  notepad.h  spacingdialog.cpp  spacingdialog.h  spacingdialog.ui  texteditor.cpp  texteditor.h
